# ffmpegPlayKot

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jesen/code/ffmpegplaykot/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/jesen/code/ffmpegplaykot/: FfmpegApp.kt  MainActivity.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/adapter/: FragAdapter.kt  GridAdapter.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/databean/: MediaData.kt  MediaPrev.kt  MediaType.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/filter/: FilterManager.kt  IFilter.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/filter/basefilter/: FilePathFilter.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/filter/picturefilter/: PicPathFilter.kt  PicSizeFilter.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/filter/videofilter/: VideoDurationFilter.kt  VideoPreviewFilter.kt  VideoTypeFilter.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/util/: AppLog.kt  CommonUtil.kt  FUtils.kt  FilterUtil.kt  PicResizeUtil.kt  PicScanHelper.kt  ScanResultUtil.kt  VideoScanHelper.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/util/extend/: BooleanExt.kt  reifiedExt.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/view/: ZoomVideoView.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/view/activity/: PickerActivity.kt  PreviewActivity.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/view/fragment/: PictureFragment.kt  VideoFragment.kt
app/src/main/java/com/jesen/code/ffmpegplaykot/widget/: FFVideoView.kt
app/src/main/res/drawable/: motion_video.xml
app/src/main/res/drawable-xhdpi/: play_circle.xml
app/src/main/res/layout/: activity_main.xml  activity_picker.xml  activity_preview.xml  fragment_preview.xml  item_grid_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/jesen/code/ffmpegplaykot/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
